force-app/main/default/objects/MessagingSession/fields/Mensaje_tomado_por_agente__c.field-meta.xml
<CustomField>
    <fullName>Mensaje_tomado_por_agente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo auxiliar utilizado para el testeo del seteo del owner en Caso cuando un vendedor toma el mensaje</description>
    <label>Mensaje tomado por agente</label>
    <type>Checkbox</type>
</CustomField>