force-app/main/default/objects/MessagingSession/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>Campo que tre el obwer para poder hacer reporteable el owner en la sesión de mensajería</description>
    <formula>If ( Owner:User.Id != null, Owner:User.FirstName+Owner:User.LastName, Owner:Queue.QueueName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>