force-app/main/default/objects/MessagingSession/fields/test_process__c.field-meta.xml
<CustomField>
    <fullName>test_process__c</fullName>
    <label>test process</label>
    <type>TextArea</type>
</CustomField>