force-app/main/default/objects/MessagingSession/listViews/Atenci_n_de_WhatsApp.listView-meta.xml
<ListView>
    <fullName>Atenci_n_de_WhatsApp</fullName>
    <columns>Owner</columns>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>EndUserAccount</columns>
    <columns>EndUserContact</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>0,2,3</value>
    </filters>
    <label>Conversaciones Activas en WhatsApp</label>
    <sharedTo>
        <group>Inbound</group>
    </sharedTo>
</ListView>