force-app/main/default/objects/MessagingSession/listViews/Autolote_Casa_Pellas_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Autolote_Casa_Pellas_MessagingSession</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Case</columns>
    <columns>EndUserContact</columns>
    <columns>EndUserAccount</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MessagingChannel</field>
        <operation>equals</operation>
        <value>Autolote Casa Pellas</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>0,2</value>
    </filters>
    <label>Autolote Casa Pellas</label>
    <sharedTo>
        <group>Digital_Autolote</group>
    </sharedTo>
</ListView>