force-app/main/default/objects/MessagingSession/listViews/Capesa_Renovacion_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Capesa_Renovacion_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Capesa Renovacion</label>
    <queue>Capesa_Renovacion</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>