force-app/main/default/objects/MessagingSession/listViews/Consulta_de_sesiones.listView-meta.xml
<ListView>
    <fullName>Consulta_de_sesiones</fullName>
    <columns>Owner</columns>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Case</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ChannelName</field>
        <operation>equals</operation>
        <value>whatsapp:+89400040</value>
    </filters>
    <label>Consulta de sesiones</label>
</ListView>