force-app/main/default/objects/MessagingSession/listViews/Equipo_Dollar_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Equipo_Dollar_MessagingSession</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Case</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MessagingChannel</field>
        <operation>equals</operation>
        <value>Dollar Rent a Car Nicaragua,whatsapp:+50586367171,whatsapp:+50587432000,whatsapp:+50588222555,Hertz Nicaragua</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>0,2,3</value>
    </filters>
    <label>Equipo Dollar</label>
    <sharedTo>
        <group>Digital_Dollar</group>
    </sharedTo>
</ListView>