force-app/main/default/objects/MessagingSession/listViews/Equipo_Inbound_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Equipo_Inbound_MessagingSession</fullName>
    <columns>Name</columns>
    <columns>Case</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>EndUserContact</columns>
    <columns>EndUserAccount</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MessagingChannel</field>
        <operation>equals</operation>
        <value>Repuestos - Casa Pellas,AutoGo,Talleres Pellas,whatsapp:+50587001111,whatsapp:50589400040</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>0,2</value>
    </filters>
    <label>Equipo Inbound</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>