force-app/main/default/objects/MessagingSession/listViews/Equipo_Motos_G_nesis.listView-meta.xml
<ListView>
    <fullName>Equipo_Motos_G_nesis</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Case</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MessagingChannel</field>
        <operation>equals</operation>
        <value>Genesis Nicaragua,whatsapp:+50557800999</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>0,2</value>
    </filters>
    <label>Equipo Motos Génesis</label>
    <sharedTo>
        <group>Equipo_Motos_G_nesis</group>
    </sharedTo>
</ListView>