force-app/main/default/objects/MessagingSession/listViews/Equipo_Motos_yamaha_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Equipo_Motos_yamaha_MessagingSession</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Case</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MessagingChannel</field>
        <operation>equals</operation>
        <value>Yamaha Casa Pellas,WhatsApp:+50587420780</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>0,2</value>
    </filters>
    <label>Equipo Motos yamaha</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>