force-app/main/default/objects/MessagingSession/listViews/Mensajeria_Citas_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Mensajeria_Citas_MessagingSession</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>AcceptTime</columns>
    <columns>EndTime</columns>
    <columns>Case</columns>
    <columns>Owner__c</columns>
    <columns>Origin</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ChannelName</field>
        <operation>equals</operation>
        <value>whatsapp:+50589400040</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>0,1,2,3</value>
    </filters>
    <label>Mensajeria Citas</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>