force-app/main/default/objects/MessagingSession/listViews/Mensajeria_Dollar_Rent_a_Car_Nicaragua_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Mensajeria_Dollar_Rent_a_Car_Nicaragua_MessagingSession</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Case</columns>
    <columns>EndUserContact</columns>
    <columns>EndUserAccount</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MessagingChannel</field>
        <operation>equals</operation>
        <value>Dollar Rent a Car Nicaragua,whatsapp:+50588222555,Mensajeria Hertz Nicaragua</value>
    </filters>
    <label>Mensajeria Dollar Rent a Car Nicaragua</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>