force-app/main/default/objects/MessagingSession/listViews/Mensajeria_Hero_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Mensajeria_Hero_MessagingSession</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Case</columns>
    <columns>EndUserContact</columns>
    <columns>EndUserAccount</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MessagingChannel</field>
        <operation>equals</operation>
        <value>Hero Motos Nicaragua,whatsapp:+50586629996</value>
    </filters>
    <label>Mensajeria Hero</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>