force-app/main/default/objects/MessagingSession/listViews/Mensajeria_Hertz_Nicaragua_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Mensajeria_Hertz_Nicaragua_MessagingSession</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MessagingChannel</field>
        <operation>equals</operation>
        <value>Hertz Nicaragua</value>
    </filters>
    <label>Mensajeria Hertz Nicaragua</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>